<resources>
    <string name="app_name">Sports_Coaching_DONNAINT_GUOI</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="nav_title_game">Game</string>
    <string name="nav_game_starcraft">Starcraft II</string>
    <string name="nav_chat">Chat</string>
    <string name="nav_quit">Quit</string>
    <string name="nav_title_miscellaneous">Miscellaneous</string>
    <string name="nav_settings">Settings</string>
    <string name="nav_last_updates">Last updates</string>

    <string name="title_activity_news">News</string>
    <string name="title_activity_starcraft">Starcraft II</string>
    <string name="title_activity_chat">Chat</string>
    <string name="title_activity_settings">Settings</string>

    <string name="add_match">+ Add match</string>
    <string name="team1">Team 1</string>
    <string name="team2">Team 2</string>
    <string name="date">Date</string>
    <string name="type">Type</string>
    <string name="score">Score</string>
    <string name="error_invalid_name_format">This name is invalid: too long (30 max)</string>
    <string name="date_format">YYYY-MM-DD</string>
    <string name="error_invalid_date_format">This date is invalid: YYYY-MM-DD</string>

    <!-- Strings related to login -->
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="sign_in">Sign in</string>
    <string name="register">Register</string>
    <string name="register_sign_in">Register and Sign in</string>

    <string name="takePicture">Take a picture</string>
    <string name="title">Title</string>

    <string-array name="array_language">
        <item>English</item>
        <item>Francais</item>
    </string-array>
    <string name="save">Save</string>

    <string name="error_field_required">This field is required</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short (5 mini)</string>

</resources>
