<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">

        <item android:title="@string/nav_title_game">
            <item
                android:id="@+id/nav_starcraft"
                android:icon="@drawable/ic_menu_camera"
                android:title="@string/nav_game_starcraft" />
            <item
                android:id="@+id/nav_chat"
                android:icon="@drawable/ic_menu_gallery"
                android:title="@string/nav_chat" />

        </item>
    </group>

    <item android:title="@string/nav_title_miscellaneous">
        <menu>
            <item
                android:id="@+id/nav_settings"
                android:icon="@drawable/ic_settings_black_24dp"
                android:title="@string/nav_settings" />
        </menu>
    </item>

</menu>
